--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
   "name": "mywebnextjs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eliseumga/mywebnextjs.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eliseumga/mywebnextjs/issues"
-  },
-  "homepage": "https://github.com/eliseumga/mywebnextjs#readme",
   "dependencies": {
-    "next": "^10.0.5",
-    "nprogress": "^0.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "mongoose": "^5.11.13",
+    "next": "10.0.5",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
